# renju

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  board.h  botzone.c  gomoku  gomoku.c  main.c  manual.c  manual.h  mcts.c  mcts.h  notes.md  players.c  players.h  requirements.txt  server.c  server.h  server.py  trainer.py  tutorial.md  util.c  util.h
include/: board.h  dataset.h  distribute.h  eval.h  game.h  layer.h  manual.h  mcts.h  mcts_nn.h  minimax.h  network.h  neuro.h  pattern.h  players.h  server.h  threat.h  trivial.h  util.h  vct.h  vcx.h  vector.h  zobrist.h
model/: default.v1.128ch.mod  default.v1.64ch.mod  static.v5.128ch.mod
src/: board.c  botzone.c  game.c  gomoku.c  init.c  main.c  manual.c  mcts.c  mcts_nn.c  minimax.c  neuro.c  players.c  server.c  util.c  zobrist.c
src/_tests/: board_vct.txt  boards.txt  eval.c  forbid.c  main.c  mcts.txt  test_forbid.c  test_neuro.c  test_threat.c  threat.c
src/algorithm/: eval.c  manual.c  mcts.c  minimax.c  network.c  pattern.c  threat.c  trivial.c  vct.c  zobrist.c
src/game/: board.c  game.c  manual.c  players.c  server.c
src/network/: dataset.c  distribute.c  layer.c  network.c  neuro.c
src/tests/: boards.inc  forbid.c  main.c  mcts.inc  mcts.txt
src/train/: dataset.c  neuro.c
src/util/: init.c  util.c  vector.c
tests/: main.c  mcts.txt
tools/: build.sh  export.py  run.sh  wrap_identifier.sh
train/: checker.py  dataset.py  export.py  layer.py  predictor.py  predictor_full.py  requirements.txt  self_play.py  selfplay.py  server.py  test.py  trainer.py
web/: index.html  script.js  server.py
